# burnt-sushi

./: LICENSE  README.md  filter.toml  resync-filters.ps1  run-cmd.ps1  sync-filters.ps1
.github/workflows/: build.yml  ci.yml  release.yml  rust.yml  sync-filters.yml
burnt-sushi/: BurntSushi.exe.manifest  Cargo.toml  build.rs  resources.rc
burnt-sushi-blocker/: Cargo.toml  build.rs
burnt-sushi-blocker/src/: cef.rs  filters.rs  hooks.rs  lib.rs
burnt-sushi/src/: args.rs  blocker.rs  main.rs  named_mutex.rs  resolver.rs  rpc.rs  spotify_process_scanner.rs  toast.rs  tray.rs  update.rs
burnt-sushi/src/console/: console.rs  global.rs  logger.rs  mod.rs  raw.rs
burnt-sushi/src/logger/: console.rs  file.rs  global.rs  logger.rs  mod.rs  noop.rs  traits.rs
burnt-sushi/src/logger/console/: log.rs  mod.rs  raw.rs
burnt-sushi/src/provisioning/: install.rs  mod.rs  msi.rs  network.rs  update.rs
burnt-sushi/wix/: main.wxs
inject-payload/: Cargo.toml
inject-payload/src/: lib.rs  utils.rs
shared/: Cargo.toml  build.rs
shared/schema/: spotify-ad-guard.capnp
shared/src/: lib.rs
spotify-ad-guard/: Cargo.toml  build.rs
spotify-ad-guard/src/: main.rs  rpc.rs  spotify_process_scanner.rs
