[package]
name = "burnt-sushi-blocker"
version = "0.3.2"
description = "Spotify AdBlocker for Windows"
readme = "../README.md"
repository = "https://github.com/OpenByteDev/burnt-sushi"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["spotify", "adblocker", "windows", "blocker", "payload"]

[dependencies]
dll-syringe = { version = "0.15.2", features = ["payload-utils"], default-features = true }
capnp = { version = "0.19.6", features = ["alloc"], default-features = false }
capnp-rpc = { version = "0.19.2", default-features = false }
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.38.1", features = ["net", "rt", "macros", "sync"], default-features = false }
tokio-util = { version = "0.7.11", features = ["compat"], default-features = false }
winapi = { version = "0.3.9", features = ["ws2tcpip", "rpc"], default-features = false }
retour = { version = "0.3.1", features = ["nightly", "static-detour"], default-features = false }
shared = { path = "../shared", default-features = false }
regex = { version = "1.10.5", default-features = false }
enum-map = { version = "2.7.3", default-features = false }
u16cstr = { version = "0.4.0", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = 3
