[package]
name = "burnt-sushi"
version = "0.3.2"
description = "Spotify AdBlocker for Windows"
readme = "../README.md"
repository = "https://github.com/OpenByteDev/burnt-sushi"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2024"
keywords = ["spotify", "adblocker", "windows", "blocker"]

[dependencies]
dll-syringe = { version = "0.17.0", features = ["into-x86-from-x64", "rpc"], default-features = false }
capnp = { version = "0.23.0", features = ["alloc"], default-features = false }
capnp-rpc = { version = "0.23.0", default-features = false }
toml = { version = "0.9.8", features = ["serde", "parse"], default-features = false }
serde = { version = "1.0.204", features = ["derive"], default-features = false }
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.38.1", features = ["net", "rt", "macros", "fs", "sync"], default-features = false }
tokio-util = { version = "0.7.11", features = ["compat"], default-features = false }
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32"], default-features = false }
wineventhook = { version = "0.10.0", default-features = false }
project-uninit = { version = "0.1.1", default-features = false }
fallible-iterator = { version = "0.3.0", default-features = false }
async-thread = { version = "0.1.2", default-features = false }
log = { version = "0.4.22", default-features = false }
shared = { path = "../shared", default-features = false }
native-windows-gui = { version = "1.0.13", default-features = false, features = ["tray-notification", "message-window", "menu", "cursor", "image-decoder", "embed-resource"] }
native-windows-derive = { version = "1.0.5", default-features = false }
pipedconsole = { version = "0.3.2", default-features = false }
widestring = { version = "1.1.0", default-features = false }
ctrlc = { version = "3.4.4", default-features = false }
clap = { version = "4.5.9", default-features = false, features = ["std", "derive", "help"] }
is_elevated = { version = "0.1.2", default-features = false }
self_update = { version = "0.42.0", default-features = false, features = ["rustls", "archive-zip"] }
winrt-toast = { version = "0.1.1", default-features = false }
faccess = { version = "0.2.4", default-features = false }
semver = { version = "1.0.23", default-features = false }
lenient_semver = { version = "0.4.2", default-features = false, features = ["semver"] }
tempfile = { version = "3.10.1", default-features = false }
u16cstr = { version = "0.4.0", default-features = false }
reqwest = { version = "0.12.5", default-features = false }
anyhow = { version = "1.0.86", default-features = false, features = ["std", "backtrace"] }
dirs = { version = "6.0.0", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }

[build-dependencies]
cargo-emit = "0.2.1"
winres = "0.1.12"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "BurntSushi"
path = "src/main.rs"
