[package]
name = "shared"
version = "0.2.0"
description = "Spotify AdBlocker for Windows"
readme = "../README.md"
repository = "https://github.com/OpenByteDev/burnt-sushi"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["spotify", "adblocker", "windows", "blocker", "payload"]

[dependencies]
capnp = { version = "0.16.1", default-features = false }
regex = { version = "1.7.1", features = ["std"], default-features = false }
enum-map = { version = "2.5.0", default-features = false }

[build-dependencies]
capnpc = "0.16.1"
cargo-emit = "0.2.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = 3
