[package]
name = "shared"
version = "0.3.1"
description = "Spotify AdBlocker for Windows"
readme = "../README.md"
repository = "https://github.com/OpenByteDev/burnt-sushi"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["spotify", "adblocker", "windows", "blocker", "payload"]

[dependencies]
capnp = { version = "0.19.2", features = ["alloc"], default-features = false }
regex = { version = "1.9.1", features = ["std"], default-features = false }
enum-map = { version = "2.6.0", default-features = false }

[build-dependencies]
capnpc = "0.19.0"
cargo-emit = "0.2.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = 3
